✨Allow classify_habitats to be more variable

--- a/vignettes/articles/parallelization.Rmd
+++ b/vignettes/articles/parallelization.Rmd
@@ -52,7 +52,7 @@ fitted_rd <- shar::list_to_randomized(list = fitted_list, observed = shar::speci
 Lastly, the created objects can be used to analyse if species-habitat associations are present as usual.
 
 ```{r results}
-landscape_classified <- shar::classify_habitats(raster = landscape)
+landscape_classified <- shar::classify_habitats(raster = landscape, n = 5, style = "fisher")
 
 results_habitat_association(pattern = fitted_rd, raster = landscape_classified)
 ```
