:pencil: Adding author to vignettes

--- a/vignettes/articles/parallelization.Rmd
+++ b/vignettes/articles/parallelization.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Parallelization"
+author: "Maximilian H.K. Hesselbarth"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
