--- a/vignettes/articles/parallelization.Rmd
+++ b/vignettes/articles/parallelization.Rmd
@@ -24,8 +24,10 @@ The following examples illustrates how to use `future` package to randomize patt
 
 First, we need to load all required packages. This includes `future` and `future.apply`.
 
-```{r load-packages, message = FALSE}
+```{r load-packages, message = FALSE, warning = FALSE}
 library(shar)
+library(spatstat)
+library(raster)
 
 library(future)
 library(future.apply)
