--- a/vignettes/get_started.Rmd
+++ b/vignettes/get_started.Rmd
@@ -18,9 +18,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r load_libraries_hidden, eval = TRUE, echo = FALSE, message = FALSE, results = "hide"}
+```{r import-libs, message = FALSE, warning = FALSE}
 library(shar)
-library(spatstat.core)
+library(spatstat)
 library(raster)
 
 set.seed(42)
