--- a/vignettes/articles/cormus_domestica_tmp.Rmd
+++ b/vignettes/articles/cormus_domestica_tmp.Rmd
@@ -31,7 +31,6 @@ library(rgbif) # For retrieving species occurrence data
 library(rnaturalearth) # For retrieving geographical data
 library(getCRUCLdata) # For retrieving climate raster data
 library(sf) # For spatial data operations
-library(raster) # For spatial data operations
 library(terra) # For spatial data operations
 library(shar) # For species-habitat association analysis
 library(spatstat) # For spatial point pattern analysis
@@ -103,7 +102,7 @@ tmp_raster_jun_eur <- terra::crop(x = tmp_raster_jun,
                                   y = c(xmin = -20, xmax = 45, ymin = 30, ymax = 73))
 
 # Reproject raster
-tmp_raster_jun_eur_3395 <- raster::projectRaster(tmp_raster_jun_eur, crs = 3395)
+tmp_raster_jun_eur_3395 <- terra::project(tmp_raster_jun_eur,  "EPSG:2169")
 
 # Classify landscape
 landscape_classified <- shar::classify_habitats(raster = tmp_raster_jun_eur_3395,
