--- a/vignettes/get_started.Rmd
+++ b/vignettes/get_started.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 ```{r import-libs, message = FALSE, warning = FALSE}
 library(shar)
 library(spatstat)
-library(raster)
+library(terra)
 
 set.seed(42)
 ```
@@ -35,12 +35,12 @@ The core of **shar** are functions to to simulate null model data by randomizing
 All functions are designed for discrete habitat classes. Following, in case only continuous data is available, this has to be classified to discrete classes. `classify_habitats` provides several ways to classify the data such as the Fisher-Jenks algorithm (Fisher 1958, Jenks & Caspall 1971)
 
 ```{r classify_habitats}
-landscape_discrete <- classify_habitats(raster = landscape, n = 5, style = "fisher")
+landscape_discrete <- classify_habitats(raster = terra::rast(landscape), n = 5, style = "fisher")
 ```
 
 ## Randomize environmental data
 
-There are two functions to randomize the environmental data: `translate_raster()` and `randomize_raster()`. The first function is a torus translation of the raster, shifting the habitat map in all four cardinal directions. This is only possible for rectangular observation areas and results in `n_random <- (raster::nrow(landscape) + 1) * (raster::ncol(landscape) + 1)  - 4` randomized rasters. The other function randomizes the environmental data using a random-walk algorithm. Here, the number of randomized rasters can be specified using the `n_random` argument.
+There are two functions to randomize the environmental data: `translate_raster()` and `randomize_raster()`. The first function is a torus translation of the raster, shifting the habitat map in all four cardinal directions. This is only possible for rectangular observation areas and results in `n_random <- (terra::nrow(terra::rast(landscape)) + 1) * (terra::ncol(terra::rast(landscape)) + 1)  - 4` randomized rasters. The other function randomizes the environmental data using a random-walk algorithm. Here, the number of randomized rasters can be specified using the `n_random` argument.
 
 However, all methods require "fully mapped data" in a sense that NA cells of the environmental data are allowed only if simultaneously these areas cannot accommodate any locations of the point pattern (e.g., a water body within a forest area). This needs to be reflected in the observation window of the point pattern. For the torus translation method, no NA values are allowed at all.
 
@@ -67,6 +67,10 @@ reconstruction <- reconstruct_pattern(pattern = species_b, n_random = 99,
 The most important function to analyse results is `results_habitat_association()`. This function compares the observed data to the null model data and by that is able to show significant species-habitat associations. The functions work for both, randomized environmental data or randomized location data. 
 
 Please be aware that due to the randomization of the null model data, results might slightly differ between different randomization approaches (e.g., `fit_point_process()` vs. `translate_raster()`) and even for repetitions of the same approach. However, the counts of the observed data should be identical, and general results and trends should be similar.
+
+```{r result_import, echo = FALSE, eval = TRUE}
+random_walk <- unpack_randomized(raster = random_walk)
+```
 
 ```{r results}
 results_habitat_association(pattern = species_a, raster = random_walk)
